# pong

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  compile_commands.json  fragment.glsl  main.cpp  pong.cpp  vertex.glsl
game/src/: main.cpp
src/: debug.cpp  main.cpp  main.rs  pong.cpp  shader.cpp
